// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulation fixtures snapshots > [baseline] matches snapshot (기본 시나리오: REST → REST → BATTLE 승리, 진행도 0→40) 1`] = `
{
  "fixtureCheck": {
    "mismatches": [],
    "name": "baseline",
    "passed": true,
  },
  "steps": [
    {
      "actionCounter": 0,
      "logs": [
        {
          "action": "REST",
          "delta": {
            "detail": {
              "stats": {
                "ap": -1,
              },
            },
            "type": "REST",
          },
          "extra": undefined,
          "floor": 1,
          "status": "STARTED",
        },
        {
          "action": "REST",
          "delta": {
            "detail": {
              "progress": {
                "delta": 10,
                "floorProgress": 10,
                "previousProgress": 0,
              },
              "stats": {
                "hp": 4,
              },
            },
            "type": "REST",
          },
          "extra": undefined,
          "floor": 1,
          "status": "COMPLETED",
        },
      ],
      "selectedEvent": "REST",
      "stateAfter": {
        "ap": 4,
        "exp": 0,
        "floor": 1,
        "floorProgress": 10,
        "hp": 10,
        "level": 1,
        "version": 2,
      },
    },
    {
      "actionCounter": 1,
      "logs": [
        {
          "action": "REST",
          "delta": {
            "detail": {
              "stats": {
                "ap": -1,
              },
            },
            "type": "REST",
          },
          "extra": undefined,
          "floor": 1,
          "status": "STARTED",
        },
        {
          "action": "REST",
          "delta": {
            "detail": {
              "progress": {
                "delta": 10,
                "floorProgress": 20,
                "previousProgress": 10,
              },
              "stats": {
                "hp": 0,
              },
            },
            "type": "REST",
          },
          "extra": undefined,
          "floor": 1,
          "status": "COMPLETED",
        },
      ],
      "selectedEvent": "REST",
      "stateAfter": {
        "ap": 3,
        "exp": 0,
        "floor": 1,
        "floorProgress": 20,
        "hp": 10,
        "level": 1,
        "version": 3,
      },
    },
    {
      "actionCounter": 2,
      "logs": [
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "stats": {
                "ap": -1,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": undefined,
              "damageDealt": undefined,
              "damageTaken": undefined,
              "expGained": undefined,
              "monster": {
                "atk": 2,
                "code": "monster-giant-rat",
                "def": 0,
                "hp": 8,
                "name": "Giant Rat",
                "spriteId": "sprite/monster-giant-rat",
              },
              "player": {
                "atk": 3,
                "def": 1,
                "exp": 0,
                "expToLevel": 10,
                "hp": 10,
                "level": 1,
                "luck": 1,
                "maxHp": 10,
                "stats": {
                  "base": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                },
              },
              "result": undefined,
              "turns": undefined,
            },
            "type": "BATTLE",
          },
          "floor": 1,
          "status": "STARTED",
        },
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "progress": {
                "delta": 20,
                "floorProgress": 40,
                "previousProgress": 20,
              },
              "rewards": {
                "gold": 2,
              },
              "stats": {
                "exp": 3,
                "hp": -1,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": "CRITICAL_HIT",
              "damageDealt": 9,
              "damageTaken": 1,
              "expGained": 3,
              "monster": {
                "atk": 2,
                "code": "monster-giant-rat",
                "def": 0,
                "hp": 8,
                "name": "Giant Rat",
                "spriteId": "sprite/monster-giant-rat",
              },
              "player": {
                "atk": 3,
                "def": 1,
                "exp": 3,
                "expToLevel": 10,
                "hp": 9,
                "level": 1,
                "luck": 1,
                "maxHp": 10,
                "stats": {
                  "base": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                },
              },
              "result": "VICTORY",
              "turns": 2,
            },
            "type": "BATTLE",
          },
          "floor": 1,
          "status": "COMPLETED",
        },
      ],
      "selectedEvent": "BATTLE",
      "stateAfter": {
        "ap": 2,
        "exp": 3,
        "floor": 1,
        "floorProgress": 40,
        "hp": 9,
        "level": 1,
        "version": 4,
      },
    },
  ],
  "summary": {
    "actionsAttempted": 3,
    "actionsCompleted": 3,
    "apConsumed": 3,
    "durationMs": 0,
    "finalAp": 2,
    "finalFloor": 1,
    "finalProgress": 40,
    "finalVersion": 4,
    "initialVersion": 1,
  },
}
`;

exports[`simulation fixtures snapshots > [elite-battle] matches snapshot (엘리트 전투 + 멀티 드랍 시나리오: Cave Spider (Elite) 승리) 1`] = `
{
  "fixtureCheck": {
    "mismatches": [],
    "name": "elite-battle",
    "passed": true,
  },
  "steps": [
    {
      "actionCounter": 0,
      "logs": [
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "stats": {
                "ap": -1,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": undefined,
              "damageDealt": undefined,
              "damageTaken": undefined,
              "expGained": undefined,
              "monster": {
                "atk": 5,
                "code": "monster-cave-spider-elite",
                "def": 1,
                "hp": 14,
                "name": "Cave Spider (Elite)",
                "spriteId": "sprite/monster-cave-spider",
              },
              "player": {
                "atk": 8,
                "def": 4,
                "exp": 0,
                "expToLevel": 50,
                "hp": 20,
                "level": 5,
                "luck": 5,
                "maxHp": 20,
                "stats": {
                  "base": {
                    "atk": 8,
                    "def": 4,
                    "hp": 20,
                    "luck": 5,
                    "maxHp": 20,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 8,
                    "def": 4,
                    "hp": 20,
                    "luck": 5,
                    "maxHp": 20,
                  },
                },
              },
              "result": undefined,
              "turns": undefined,
            },
            "type": "BATTLE",
          },
          "floor": 5,
          "status": "STARTED",
        },
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "progress": {
                "delta": 20,
                "floorProgress": 20,
                "previousProgress": 0,
              },
              "rewards": {
                "chests": 1,
                "gold": 3,
              },
              "stats": {
                "exp": 10,
                "hp": -1,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": undefined,
              "damageDealt": 15,
              "damageTaken": 1,
              "expGained": 10,
              "monster": {
                "atk": 5,
                "code": "monster-cave-spider-elite",
                "def": 1,
                "hp": 14,
                "name": "Cave Spider (Elite)",
                "spriteId": "sprite/monster-cave-spider",
              },
              "player": {
                "atk": 8,
                "def": 4,
                "exp": 10,
                "expToLevel": 50,
                "hp": 19,
                "level": 5,
                "luck": 5,
                "maxHp": 20,
                "stats": {
                  "base": {
                    "atk": 8,
                    "def": 4,
                    "hp": 20,
                    "luck": 5,
                    "maxHp": 20,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 8,
                    "def": 4,
                    "hp": 20,
                    "luck": 5,
                    "maxHp": 20,
                  },
                },
              },
              "result": "VICTORY",
              "turns": 2,
            },
            "type": "BATTLE",
          },
          "floor": 5,
          "status": "COMPLETED",
        },
      ],
      "selectedEvent": "BATTLE",
      "stateAfter": {
        "ap": 0,
        "exp": 10,
        "floor": 5,
        "floorProgress": 20,
        "hp": 19,
        "level": 5,
        "version": 2,
      },
    },
  ],
  "summary": {
    "actionsAttempted": 1,
    "actionsCompleted": 1,
    "apConsumed": 1,
    "durationMs": 0,
    "finalAp": 0,
    "finalFloor": 5,
    "finalProgress": 20,
    "finalVersion": 2,
    "initialVersion": 1,
  },
}
`;

exports[`simulation fixtures snapshots > [forced-move] matches snapshot (강제 MOVE 시나리오: progress 100 → floor 이동) 1`] = `
{
  "fixtureCheck": {
    "mismatches": [],
    "name": "forced-move",
    "passed": true,
  },
  "steps": [
    {
      "actionCounter": 0,
      "logs": [
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "stats": {
                "ap": -1,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": undefined,
              "damageDealt": undefined,
              "damageTaken": undefined,
              "expGained": undefined,
              "monster": {
                "atk": 2,
                "code": "monster-giant-rat",
                "def": 0,
                "hp": 8,
                "name": "Giant Rat",
                "spriteId": "sprite/monster-giant-rat",
              },
              "player": {
                "atk": 3,
                "def": 1,
                "exp": 0,
                "expToLevel": 10,
                "hp": 10,
                "level": 1,
                "luck": 1,
                "maxHp": 10,
                "stats": {
                  "base": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                },
              },
              "result": undefined,
              "turns": undefined,
            },
            "type": "BATTLE",
          },
          "floor": 1,
          "status": "STARTED",
        },
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "progress": {
                "delta": 10,
                "floorProgress": 100,
                "previousProgress": 90,
              },
              "rewards": {
                "chests": 1,
                "gold": 2,
              },
              "stats": {
                "exp": 3,
                "hp": -1,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": undefined,
              "damageDealt": 9,
              "damageTaken": 1,
              "expGained": 3,
              "monster": {
                "atk": 2,
                "code": "monster-giant-rat",
                "def": 0,
                "hp": 8,
                "name": "Giant Rat",
                "spriteId": "sprite/monster-giant-rat",
              },
              "player": {
                "atk": 3,
                "def": 1,
                "exp": 3,
                "expToLevel": 10,
                "hp": 9,
                "level": 1,
                "luck": 1,
                "maxHp": 10,
                "stats": {
                  "base": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 3,
                    "def": 1,
                    "hp": 10,
                    "luck": 1,
                    "maxHp": 10,
                  },
                },
              },
              "result": "VICTORY",
              "turns": 2,
            },
            "type": "BATTLE",
          },
          "floor": 1,
          "status": "COMPLETED",
        },
        {
          "action": "MOVE",
          "delta": undefined,
          "extra": undefined,
          "floor": 1,
          "status": "STARTED",
        },
        {
          "action": "MOVE",
          "delta": {
            "detail": {
              "fromFloor": 1,
              "previousProgress": 100,
              "progress": {
                "delta": -100,
                "floorProgress": 0,
                "previousProgress": 100,
              },
              "toFloor": 2,
            },
            "type": "MOVE",
          },
          "extra": undefined,
          "floor": 2,
          "status": "COMPLETED",
        },
      ],
      "selectedEvent": "BATTLE",
      "stateAfter": {
        "ap": 2,
        "exp": 3,
        "floor": 2,
        "floorProgress": 0,
        "hp": 9,
        "level": 1,
        "version": 2,
      },
    },
  ],
  "summary": {
    "actionsAttempted": 1,
    "actionsCompleted": 1,
    "apConsumed": 1,
    "durationMs": 0,
    "finalAp": 2,
    "finalFloor": 2,
    "finalProgress": 0,
    "finalVersion": 2,
    "initialVersion": 1,
  },
}
`;

exports[`simulation fixtures snapshots > [trap-death] matches snapshot (TRAP 사망 시나리오: TRAP 피해로 사망 → DEATH + REVIVE) 1`] = `
{
  "fixtureCheck": {
    "mismatches": [],
    "name": "trap-death",
    "passed": true,
  },
  "steps": [
    {
      "actionCounter": 0,
      "logs": [
        {
          "action": "TRAP",
          "delta": {
            "detail": {
              "stats": {
                "ap": -1,
              },
            },
            "type": "TRAP",
          },
          "extra": undefined,
          "floor": 1,
          "status": "STARTED",
        },
        {
          "action": "TRAP",
          "delta": {
            "detail": {
              "stats": {
                "hp": -3,
              },
            },
            "type": "TRAP",
          },
          "extra": undefined,
          "floor": 1,
          "status": "COMPLETED",
        },
        {
          "action": "DEATH",
          "delta": {
            "detail": {
              "progress": {
                "delta": -10,
                "floorProgress": 0,
                "previousProgress": 10,
              },
              "stats": {},
            },
            "type": "DEATH",
          },
          "extra": {
            "details": {
              "cause": "TRAP_DAMAGE",
            },
            "type": "DEATH",
          },
          "floor": 1,
          "status": "COMPLETED",
        },
        {
          "action": "REVIVE",
          "delta": {
            "detail": {
              "stats": {
                "hp": 10,
              },
            },
            "type": "REVIVE",
          },
          "extra": undefined,
          "floor": 1,
          "status": "COMPLETED",
        },
      ],
      "selectedEvent": "TRAP",
      "stateAfter": {
        "ap": 1,
        "exp": 0,
        "floor": 1,
        "floorProgress": 0,
        "hp": 10,
        "level": 1,
        "version": 2,
      },
    },
  ],
  "summary": {
    "actionsAttempted": 1,
    "actionsCompleted": 1,
    "apConsumed": 1,
    "durationMs": 0,
    "finalAp": 1,
    "finalFloor": 1,
    "finalProgress": 0,
    "finalVersion": 2,
    "initialVersion": 1,
  },
}
`;

exports[`simulation fixtures snapshots > [turn-limit] matches snapshot (turn-limit 패배 시나리오: 30턴 후 TURN_LIMIT 패배) 1`] = `
{
  "fixtureCheck": {
    "mismatches": [],
    "name": "turn-limit",
    "passed": true,
  },
  "steps": [
    {
      "actionCounter": 0,
      "logs": [
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "stats": {
                "ap": -1,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": undefined,
              "damageDealt": undefined,
              "damageTaken": undefined,
              "expGained": undefined,
              "monster": {
                "atk": 22,
                "code": "monster-ancient-dragon",
                "def": 11,
                "hp": 110,
                "name": "Ancient Dragon",
                "spriteId": "sprite/monster-ancient-dragon",
              },
              "player": {
                "atk": 2,
                "def": 60,
                "exp": 0,
                "expToLevel": 300,
                "hp": 150,
                "level": 30,
                "luck": 0,
                "maxHp": 150,
                "stats": {
                  "base": {
                    "atk": 2,
                    "def": 60,
                    "hp": 150,
                    "luck": 0,
                    "maxHp": 150,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 2,
                    "def": 60,
                    "hp": 150,
                    "luck": 0,
                    "maxHp": 150,
                  },
                },
              },
              "result": undefined,
              "turns": undefined,
            },
            "type": "BATTLE",
          },
          "floor": 120,
          "status": "STARTED",
        },
        {
          "action": "BATTLE",
          "delta": {
            "detail": {
              "progress": {
                "delta": 20,
                "floorProgress": 20,
                "previousProgress": 0,
              },
              "rewards": undefined,
              "stats": {
                "hp": -34,
              },
            },
            "type": "BATTLE",
          },
          "extra": {
            "details": {
              "cause": "TURN_LIMIT",
              "damageDealt": 33,
              "damageTaken": 34,
              "expGained": 0,
              "monster": {
                "atk": 22,
                "code": "monster-ancient-dragon",
                "def": 11,
                "hp": 110,
                "name": "Ancient Dragon",
                "spriteId": "sprite/monster-ancient-dragon",
              },
              "player": {
                "atk": 2,
                "def": 60,
                "exp": 0,
                "expToLevel": 300,
                "hp": 116,
                "level": 30,
                "luck": 0,
                "maxHp": 150,
                "stats": {
                  "base": {
                    "atk": 2,
                    "def": 60,
                    "hp": 150,
                    "luck": 0,
                    "maxHp": 150,
                  },
                  "equipmentBonus": {
                    "atk": 0,
                    "def": 0,
                    "hp": 0,
                    "luck": 0,
                    "maxHp": 0,
                  },
                  "total": {
                    "atk": 2,
                    "def": 60,
                    "hp": 150,
                    "luck": 0,
                    "maxHp": 150,
                  },
                },
              },
              "result": "DEFEAT",
              "turns": 30,
            },
            "type": "BATTLE",
          },
          "floor": 120,
          "status": "COMPLETED",
        },
      ],
      "selectedEvent": "BATTLE",
      "stateAfter": {
        "ap": 0,
        "exp": 0,
        "floor": 120,
        "floorProgress": 20,
        "hp": 116,
        "level": 30,
        "version": 2,
      },
    },
  ],
  "summary": {
    "actionsAttempted": 1,
    "actionsCompleted": 1,
    "apConsumed": 1,
    "durationMs": 0,
    "finalAp": 0,
    "finalFloor": 120,
    "finalProgress": 20,
    "finalVersion": 2,
    "initialVersion": 1,
  },
}
`;
